2009-12-07  Jeffrey Stedfast  <fejj@novell.com>

	* RuntimeControls/SilverlightControls/Primitives/ButtonBase.cs
	(OnLostMouseCapture): Implemented.

2009-11-10  Larry Ewing  <lewing@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: Reorder
	arguments so my head doesn't hurt.

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* Controls/Src/ToolTip/ToolTip.cs: add stubbed things for
	PlacementProperty and PlacementTargetProperty.

	r: rolf

2009-11-08  Andreia Gaita  <avidigal@novell.com>

	* RuntimeControls/SilverlightControls/Button.cs: Add missing
	OnClick	override

	r: toshok

2009-11-06  Chris Toshok  <toshok@ximian.com>

	* Controls/Src/ListBox/ListBoxItem.cs: InvokeLoaded no longer
	takes event args since it doesn't emit the event.

2009-11-06  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: User
	  the correct value for ExtentHeight and clean up some of the
	  over-invalidations in ScrollViewer so that it doesn't suck
	  up all the available CPU. Fixes 442 and also improves
	  ScrollViewer significantly in the SL Toolkit demo
	  (especially the WrapPanel demo). r: spouliot

2009-11-04  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs: If the content of
	  ListBoxItem is a Control, don't enter the Disabled state. I
	  assume the reason for this is that (for example) if you put
	  a Button inside a ListBoxItem and disable the ListBoxItem,
	  what you want to see is the buttons Disabled state
	  animation. Without this change you'd get a combination of
	  the LBIs Disabled state and the Buttons disabled state,
	  which just looks weird. It's possible that a similar fix
	  will be needed for every ContentControl (control?) subclass
	  which defines its own VisualStates, but for now I think it's
	  just ListBoxItem. Helps get DRT 432 even closer. r: shana.
