@@ -14,7 +14,7 @@ namespace System.Windows.Controls.Primitives
     /// or derived class.  It exposes scrolling properties, methods for logical scrolling, computing
     /// which children are visible, and measuring/drawing/offsetting/clipping content.
     /// </summary> 
-    internal interface IScrollInfo 
+    public interface IScrollInfo 
     {
  
         #region Public Methods
@@ -30,6 +30,8 @@ namespace System.Windows.Controls.Primitives
         /// An implementation may coerce this value into a valid range, typically inclusively between 0 and <see cref="ExtentHeight" /> less <see cref="ViewportHeight" />.
         /// </summary> 
         void SetVerticalOffset(double offset);
+
+        Rect MakeVisible (UIElement visual, Rect rectangle);
 
         #endregion 
  
